syntax = "proto3";

package tornado.v1;

// Import timestamp for time-based fields
import "google/protobuf/timestamp.proto";

// Core event messages
message Deposit {
    bytes commitment = 1;
    uint32 leaf_index = 2;
    uint64 timestamp = 3;
}

message Withdrawal {
    string recipient = 1;          // Ethereum address as hex string
    bytes nullifier_hash = 2;
    string relayer = 3;           // Ethereum address as hex string
    string fee = 4;               // Using string for precise amounts
}

// Aggregated metrics
message DepositMetrics {
    uint64 total_deposits = 1;
    uint64 unique_commitments = 2;
    map<string, uint64> deposits_by_hour = 3;  // ISO timestamp -> count
}

message WithdrawalMetrics {
    uint64 total_withdrawals = 1;
    uint64 unique_nullifiers = 2;
    string total_fees = 3;        // Using string for precise sum
    map<string, uint64> withdrawals_by_hour = 4;  // ISO timestamp -> count
}

// Combined pool statistics
message PoolStats {
    uint64 total_deposits = 1;
    uint64 total_withdrawals = 2;
    string total_fees = 3;        // Using string for precise amounts
    double average_time_between_deposit_withdrawal = 4;  // In seconds
    map<string, uint64> active_relayers = 5;  // Relayer address -> count
}